# yaegi

./: Ded.md  MANIFEST.in  README.md  pyproject.toml
.github/: CONTRIBUTING_YAEGI.md  YAeGI_DOCS.md
.github/ISSUE_TEMPLATE/: bug_report.yaml
.github/workflows/: ci.yml
examples/: basic_usage.py
guide/: docs.md
tests/: test_kundali.py
yaegi/: __init__.py
yaegi.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
yaegi/calculations/: compatibility.py  dasha.py  kundali.py  panchang.py  yogas.py
yaegi/cli/: main.py
yaegi/config/: settings.py
yaegi/core/: astronomy.py  conversions.py  mathutils.py
yaegi/data/: constants.py  yogas.json
yaegi/models/: chart.py  dasha.py  house.py  planet.py
